<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/wallpaperList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:drawSelectorOnTop="true"
        android:fitsSystemWindows="true"
        android:horizontalSpacing="@dimen/gallery_chosen_photo_grid_spacing"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:stretchMode="columnWidth"
        android:verticalSpacing="@dimen/gallery_chosen_photo_grid_spacing"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/emptyDescription"
            style="@style/Widget.Album.Text.Prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_prompt_margin"
            android:drawableTop="@drawable/ic_launcher"
            android:gravity="center_horizontal"
            android:text="@string/advance_empty_description" />

        <Button
            android:id="@+id/btnLoadAdvanceWallpaper"
            style="@style/Widget.Album.Button.Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_ad_small"
            android:text="@string/advance_empty_load" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/Widget.Album.Text.Prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_prompt_margin"
            android:drawableTop="@drawable/icon_cry"
            android:gravity="center_horizontal"
            android:text="@string/advance_retry_description" />

        <Button
            android:id="@+id/btnRetry"
            style="@style/Widget.Album.Button.Retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance_retry" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>