<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />

    </android.support.design.widget.AppBarLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.Album.Text.Prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_prompt_margin"
                android:drawableTop="@drawable/icon_heart"
                android:gravity="center_horizontal"
                android:text="@string/ad_prompt" />

            <Button
                android:id="@+id/btnReview"
                style="@style/Widget.Album.Button.Base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/icon_ad_small"
                android:text="@string/advance_review" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp"
            android:visibility="gone">

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/Widget.Album.Text.Prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/global_prompt_margin"
                android:drawableTop="@drawable/icon_cry"
                android:gravity="center_horizontal"
                android:text="@string/ad_retry" />

            <Button
                android:id="@+id/btnRetry"
                style="@style/Widget.Album.Button.Retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advance_retry" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>